force-app/main/default/objects/custom_create309__c/custom_create309__c.object-meta.xml
<CustomObject>
    <label>Custom created object309</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects309</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>