force-app/main/default/objects/custom_create309__c/fields/custom_create_309field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_309field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 309field505</label>
    <type>Checkbox</type>
</CustomField>